force-app/main/default/objects/Lottery__c/Lottery__c.object-meta.xml
<CustomObject>
    <label>Lottery</label>
    <nameField>
        <label>Draw Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lotteries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>