force-app/main/default/objects/Lottery__c/fields/Number_4__c.field-meta.xml
<CustomField>
    <fullName>Number_4__c</fullName>
    <label>Number 4</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>