force-app/main/default/objects/Lottery__c/fields/PowerBall__c.field-meta.xml
<CustomField>
    <fullName>PowerBall__c</fullName>
    <label>PowerBall</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>