force-app/main/default/objects/Lottery__c/fields/Supplementary_2__c.field-meta.xml
<CustomField>
    <fullName>Supplementary_2__c</fullName>
    <label>Supplementary 2</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>