force-app/main/default/objects/Lottery__c/listViews/OZ_Lotto.listView-meta.xml
<ListView>
    <fullName>OZ_Lotto</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Number_1__c</columns>
    <columns>Number_2__c</columns>
    <columns>Number_3__c</columns>
    <columns>Number_6__c</columns>
    <columns>Number_5__c</columns>
    <columns>Number_4__c</columns>
    <columns>Number_7__c</columns>
    <columns>Supplementary_1__c</columns>
    <columns>Supplementary_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lottery__c.OZ_Lotto</value>
    </filters>
    <label>OZ Lotto</label>
</ListView>